feat: implement /ip endpoint
